<resources>
    <string name="app_name">Lliga de Futbol</string>
    <string name="app_label">Lliga</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_about">Sobre l\'aplicació</string>

    <string name="header_equip">NOM</string>
    <string name="header_victories">V</string>
    <string name="header_empats">E</string>
    <string name="header_derrotes">D</string>
    <string name="header_punts">P</string>

    <string name="option_delete">Borrar</string>
    <string name="option_save">Guardar</string>

    <string name="empty_text">No hi ha elements a mostrar</string>
</resources>
