<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="idi.francesc.footballleague.ClassificacioFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/header_classificacio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="8.5"
            android:background="@color/colorPrimary">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/header_equip"
                android:textSize="18sp"
                android:textColor="#FFF"
                android:layout_weight="4"
                />

            <TextView
                android:textColor="#FFF"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/header_victories"
                android:textSize="18sp"
                />

            <TextView
                android:textColor="#FFF"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/header_derrotes"
                android:textSize="18sp"
                />

            <TextView
                android:textColor="#FFF"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/header_empats"
                android:textSize="18sp"
                />

            <TextView
                android:textColor="#FFF"
                android:id="@+id/header_p"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:gravity="center"
                android:text="@string/header_punts"
                android:textSize="18sp"
                />
        </LinearLayout>

        <android.support.v4.widget.SwipeRefreshLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:id="@+id/swipe_classif"
            android:layout_below="@id/header_classificacio"
            >

            <ListView
                android:id="@+id/list_classificacio"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />

            <LinearLayout
                android:id="@+id/empty"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal|center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/empty_text"/>
            </LinearLayout>

        </android.support.v4.widget.SwipeRefreshLayout>

    </RelativeLayout>


</FrameLayout>
